[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Objects/Tower/Tower.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 183.0

[node name="Tower" type="Area2D" groups=[
"Enemy",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 7
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Rect" ]

[node name="Hitbox" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Range" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Area" type="CollisionShape2D" parent="Range" index="0"]

shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]

[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]


